corrected spacing in HOME section

--- a/style.css
+++ b/style.css
@@ -181,7 +181,8 @@ button:hover {
 }
 
 .logo-img {
-  width: 250px;
+  width: 300px;
+  margin-bottom: calc(var(--spacing) * 5);
 }
 
 .arrow-down {
@@ -190,7 +191,6 @@ button:hover {
   display: inline-block;
   padding: 5px;
   transform: rotate(45deg);
-  margin-top: calc(var(--spacing) * 10);
 }
 /* end of HOME section */
 
